[tool.poetry]
name = "web-hw-06"
version = "0.1.0"
description = ""
authors = ["m0wgli <rodiontiutiunyk@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_06"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
